--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="rock.js"></script>
+  <script src="index.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="rock.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Rock Paper Scissors</title>
 </head>
 <body>
