--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="index.js"></script>
+  <script src="index.js" defer></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
@@ -9,89 +9,11 @@
 </head>
 <body>
   <b><p>Rock Paper Scissors</p></b>
-  <button class="butt1" onclick="
-  
-  const randomNumber = Math.random();
-  let computerMove ='';
+  <button class="butt1" onclick="playGame('rock')">Rock</button>
 
-// 1 divded by 3 
-    if(randomNumber >= 0 && randomNumber < 1/3) {
-      computerMove = 'rock';
-    }
-    else if(randomNumber >= 1/3 && randomNumber < 2/3){
-     computerMove ='Paper'
-    }
-    else if(randomNumber >= 2/3 && randomNumber < 1){
-      computerMove = 'Scissors'
-    }
-    console.log(computerMove);
-   
-    let result='';
+  <button onclick="playGame('paper')">Paper</button>
 
-    if (computerMove === 'rock'){
-      result = 'You Tie.';
-    }
-    else if(computerMove === 'Paper'){
-      result = 'You Lose';
-    }
-    else if(computerMove === 'Scissors'){
-      result = 'You Win';
-    }
-
-    alert(`You picked rock. computer picked ${computerMove}. ${result}`);
-  ">Rock</button>
-
-
-  <button onclick="
-
-  if(randomNumber >= 0 && randomNumber < 1/3) {
-    computerMove2 = 'rock';
-  }
-  else if(randomNumber >= 1/3 && randomNumber < 2/3){
-    computerMove2 = 'Paper';
-  }
-  else if(randomNumber >= 2/3 && randomNumber < 1){
-    computerMove2 = 'Scissors';
-  }
-    console.log(computerMove2);
-
-  if(computerMove2 === 'rock'){
-    result = 'You win';
-  }
-  else if(computerMove2 === 'Paper'){
-    result = 'You Tie';
-  }
-  else if(computerMove2 === 'Scissors'){
-    result = 'You Lose';
-  }
-
-  alert(`You picked Paper. computer picked ${computerMove2}. ${result}`);
-  ">Paper</button>
-
-  <button onclick="
-    if(randomNumber >= 0 && randomNumber < 1/3){
-      computerMove = 'Rock';
-    }
-    else if(randomNumber >= 1/3 && randomNumber < 2/3){
-      computerMove = 'Paper';
-    }
-    else if(randomNumber >= 2/3 && randomNumber < 1){
-      computerMove = 'Scissors'
-    }
-    console.log(computerMove);
-
-    if(computerMove === 'Rock'){
-      result = 'You Lose'
-    }
-    else if( computerMove === 'Paper'){
-      result = 'You Win'
-    }
-    else if(computerMove === 'Scissors'){
-      result = 'You Tie'
-    }
-
-    alert(`You picked rock. computer picked ${computerMove}. ${result}`);
-  ">Scissors</button>
+  <button onclick="playGame('scissors')">Scissors</button>
 
 </body>
 </html>
