--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
 
 
   <button onclick="
-
-  if(randomNumber >= 0 && randomNumber < 1/3) {
+  //2 divided by 3 side so there won't be conflict
+  const randomNumber2 = (Math.random() * 2);
+  if(randomNumber2 >= 0 && randomNumber2 < 2/3) {
     computerMove2 = 'rock';
   }
-  else if(randomNumber >= 1/3 && randomNumber < 2/3){
+  else if(randomNumber2 >= 2/3 && randomNumber2 < 4/3){
     computerMove2 = 'Paper';
   }
-  else if(randomNumber >= 2/3 && randomNumber < 1){
+  else if(randomNumber2 >= 4/3 && randomNumber2 < 2){
     computerMove2 = 'Scissors';
   }
     console.log(computerMove2);
@@ -69,13 +70,16 @@
   ">Paper</button>
 
   <button onclick="
-    if(randomNumber >= 0 && randomNumber < 1/3){
+
+    const randomNumber3 = (Math.random() * 3);
+    // 3 divided by 3 sides
+    if(randomNumber3 >= 0 && randomNumber3 < 1){
       computerMove = 'Rock';
     }
-    else if(randomNumber >= 1/3 && randomNumber < 2/3){
+    else if(randomNumber3 >= 1 && randomNumber3 < 2){
       computerMove = 'Paper';
     }
-    else if(randomNumber >= 2/3 && randomNumber < 1){
+    else if(randomNumber3 >= 2 && randomNumber3 < 3){
       computerMove = 'Scissors'
     }
     console.log(computerMove);
