--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
     console.log(computerMove);
 
     if(computerMove === 'Rock'){
-      result = 'You Win'
+      result = 'You Lose'
     }
     else if( computerMove === 'Paper'){
-      result = 'You Lose'
+      result = 'You Win'
     }
     else if(computerMove === 'Scissors'){
       result = 'You Tie'
     }
 
-    alert(`You picked rock. computer picked ${computerMove}. ${result}`);
+    alert(`You picked scissors. computer picked ${computerMove}. ${result}`);
   ">Scissors</button>
 
 </body>
