--- a/index.html
+++ b/index.html
@@ -9,93 +9,9 @@
 </head>
 <body>
   <b><p>Rock Paper Scissors</p></b>
-  <button class="butt1" onclick="
-  
-  const randomNumber = Math.random();
-  let computerMove ='';
-
-// 1 divded by 3 
-    if(randomNumber >= 0 && randomNumber < 1/3) {
-      computerMove = 'rock';
-    }
-    else if(randomNumber >= 1/3 && randomNumber < 2/3){
-     computerMove ='Paper'
-    }
-    else if(randomNumber >= 2/3 && randomNumber < 1){
-      computerMove = 'Scissors'
-    }
-    console.log(computerMove);
-   
-    let result='';
-
-    if (computerMove === 'rock'){
-      result = 'You Tie.';
-    }
-    else if(computerMove === 'Paper'){
-      result = 'You Lose';
-    }
-    else if(computerMove === 'Scissors'){
-      result = 'You Win';
-    }
-
-    alert(`You picked rock. computer picked ${computerMove}. ${result}`);
-  ">Rock</button>
-
-
-  <button onclick="
-  //2 divided by 3 side so there won't be conflict
-  const randomNumber2 = (Math.random() * 2);
-  if(randomNumber2 >= 0 && randomNumber2 < 2/3) {
-    computerMove2 = 'rock';
-  }
-  else if(randomNumber2 >= 2/3 && randomNumber2 < 4/3){
-    computerMove2 = 'Paper';
-  }
-  else if(randomNumber2 >= 4/3 && randomNumber2 < 2){
-    computerMove2 = 'Scissors';
-  }
-    console.log(computerMove2);
-
-  if(computerMove2 === 'rock'){
-    result = 'You win';
-  }
-  else if(computerMove2 === 'Paper'){
-    result = 'You Tie';
-  }
-  else if(computerMove2 === 'Scissors'){
-    result = 'You Lose';
-  }
-
-  alert(`You picked Paper. computer picked ${computerMove2}. ${result}`);
-  ">Paper</button>
-
-  <button onclick="
-
-    const randomNumber3 = (Math.random() * 3);
-    // 3 divided by 3 sides
-    if(randomNumber3 >= 0 && randomNumber3 < 1){
-      computerMove = 'Rock';
-    }
-    else if(randomNumber3 >= 1 && randomNumber3 < 2){
-      computerMove = 'Paper';
-    }
-    else if(randomNumber3 >= 2 && randomNumber3 < 3){
-      computerMove = 'Scissors'
-    }
-    console.log(computerMove);
-
-    if(computerMove === 'Rock'){
-      result = 'You Lose'
-    }
-    else if( computerMove === 'Paper'){
-      result = 'You Win'
-    }
-    else if(computerMove === 'Scissors'){
-      result = 'You Tie'
-    }
-
-    alert(`You picked scissors. computer picked ${computerMove}. ${result}`);
-  ">Scissors</button>
+  <button class="butt1" onclick="playGame('rock')">Rock</button>
+  <button onclick="playGame('paper');">Paper</button>
+  <button onclick="playGame('scissors');">Scissors</button>
 
 </body>
 </html>
