--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <button class="butt1" onclick="playGame('rock')">Rock</button>
   <button onclick="playGame('paper');">Paper</button>
   <button onclick="playGame('scissors');">Scissors</button>
-
+  <button onclick="reset()">Reset Score</button>
 </body>
 </html>
