--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
+  
   <b><p>Rock Paper Scissors</p></b>
+  <p>
   <button class="butt1" onclick="playGame('rock')">Rock</button>
   <button onclick="playGame('paper');">Paper</button>
   <button onclick="playGame('scissors');">Scissors</button>
-  <button onclick="reset()">Reset Score</button>
+  </p>
+  <p id="para">
+  <button class="butt2" onclick="reset()">Reset Score</button>
+  </p>
 </body>
 </html>
