--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   <p id="para">
   <button class="butt2" onclick="reset()">Reset Score</button>
-  <script src="rock-dom.js"></script>
+  <script src="index.js"></script>
   </p>
 </body>
 </html>
